--- a/README
+++ b/README
@@ -3,6 +3,10 @@ JavaScript Library
 
 since 2012.3
 
+
+# dijkstra.js
+Dijkstra 最短路径算法
+
 # xml2json.js
 convert XML object to JSON object. 
 usage: chrome.extension for XML-RPC
